# experiment-environment

./: .gitignore  BUILDING.md  CALIBRATION_REPORT.md  CAPSTONE_MEASUREMENT.md  CLAUDE.md  MP0B_FINDINGS.md  README.md  pyproject.toml  requirements.txt
config/: config.yaml  quantities.yaml  theory_objects.yaml
kaggle/: run_kaggle.py
scripts/: mp0b15_analyze.py  throughput_check.py
src/: cli.py  config.py
src/db/: connection.py  corpus_reader.py  director_reader.py  pressure_reader.py  readonly.py  rse_reader.py  schema.py
src/export/: exporters.py
src/ingest/: evidence_graph.py
src/lab/: axioms.py  estimator.py  icp0.py  mp0b.py  train.py
src/lab/models/: attention.py  diagonal_ssm.py
src/lab/tasks/: mqar.py
src/phenomena/: phenomenon.py
src/quantities/: quantity.py
src/theory/: attack.py  cemetery.py  dependency.py  objects.py  verdict.py
src/theory/obituaries/: obituary.py
src/utils/: hashing.py  logging.py
tests/: conftest.py  test_cli.py  test_estimator.py  test_ingest.py  test_lab.py  test_scan.py  test_theory.py
